# docker-python3-dev

./: Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: pyproject.toml
