[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ASuna <sunajp.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
